--- a/system/gd/rust/linux/mgmt/Cargo.toml
+++ b/system/gd/rust/linux/mgmt/Cargo.toml
@@ -21,6 +21,7 @@ futures = "0.3.13"
 inotify = "*"
 log = "0.4.14"
 nix = "*"
+protobuf = "2.0"
 regex = "1.5"
 serde_json = "1.0"
 syslog = "4.0"
@@ -28,6 +29,7 @@ tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync"
 
 [build-dependencies]
 pkg-config = "0.3.19"
+protoc-rust = "*"
 
 [[bin]]
 name = "btmanagerd"
