--- a/system/gd/rust/linux/mgmt/Cargo.toml
+++ b/system/gd/rust/linux/mgmt/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bt_topshim = { path = "../../topshim" }
 btstack = { path = "../stack" }
+num-traits = "0.2"
 
 # bt deps
 bt_common = { path = "../../common" }
